# Wanderer

./: .gitignore  .gitmodules  README.md
base/: README.md  wanderer_client.py
docs/: 00-architecture.md  01-decisions.md  02-plan.md  Wanderer_Command_Architecture.md  cockpit_bench_test.md
firmware/: CMakeLists.txt  README.md  pico_sdk_import.cmake
firmware/airframe/: CMakeLists.txt
firmware/airframe/legacy/: README.md  i2c_peripheral.c  i2c_peripheral.h
firmware/airframe/src/: config.h  encoder_math.c  encoder_math.h  main.cpp  motor_output.c  motors.c  quadrature_encoder.pio
firmware/airframe/tests/: encoder_state_trace.pio  motor_hardware_test.c
firmware/common/: cockpit_codec.cpp  cockpit_codec.h  cockpit_handler.cpp  cockpit_handler.h  protocol.h  tactical.cpp  tactical.h  test_tactical.cpp
firmware/common/tests/: CMakeLists.txt  test_codec.cpp  test_handler.cpp
firmware/rflink/: CMakeLists.txt  main.cpp
hardware/: bom.md  jgb520_motor_encoder_pinout.md  power-budget.md  wiring.md
pico/: CMakeLists.txt  README.md
pico/src/: config.h  encoders.c  encoders.h  i2c_peripheral.c  i2c_peripheral.h  main.c  motor_output.c  motor_output.h  motors.c  motors.h
pico/tests/: CMakeLists.txt  motor_hardware_test.c  test_encoder_math.c  test_motor_output.c
pilot/: README.md
pilot/cockpit/: __init__.py  api.py  errors.py  events.py  link.py  sim.py  wire.py
pilot/tests/: test_cockpit_api.py  test_wire_vectors.py
protocol/: README.md  base_text_protocol.md  cockpit_protocol.md  cockpit_vectors.txt  i2c_registers.h  i2c_registers.md
tactical/: README.md
tools/: README.md
